--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "compileandpublish",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,6 +15,7 @@
     "archiver": "^7.0.1",
     "axios": "^1.11.0",
     "commander": "^14.0.0",
+    "crypto": "^1.0.1",
     "node-scp": "^0.0.25",
     "typescript": "^5.9.2",
     "webpack": "^5.101.3",
